--- a/index.html
+++ b/index.html
@@ -41,8 +41,32 @@
                     <div class="card h-100">
                       <img src="images/p1.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5  class="p-name card-title">Lionel Messi</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
+
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-lg-4">
+                    <div class="card h-100">
+                      <img src="images/p1.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5  class="p-name card-title">Neymar Jr</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <button onclick="addList(this)" class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
+
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-lg-4">
+                    <div class="card h-100">
+                      <img src="images/p1.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5  class="p-name card-title">Kylian Mbappé</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <button onclick="addList(this)" class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
+
                       </div>
                     </div>
                   </div>
@@ -52,6 +76,8 @@
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <button onclick="addList(this)" class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
+
                       </div>
                     </div>
                   </div>
@@ -61,6 +87,8 @@
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <button onclick="addList(this)" class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
+
                       </div>
                     </div>
                   </div>
@@ -70,24 +98,8 @@
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                    </div>
-                  </div>
-                <div class="col-lg-4">
-                    <div class="card h-100">
-                      <img src="images/p1.png" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                    </div>
-                  </div>
-                <div class="col-lg-4">
-                    <div class="card h-100">
-                      <img src="images/p1.png" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <button onclick="addList(this)" class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
+
                       </div>
                     </div>
                   </div>
@@ -105,32 +117,55 @@
 
                 <div class="row g-3">
 
-                    <div class="col-lg-12 bg-dark text-white ">
+                    <div class="col-lg-12 text-white ">
+                        <p class="text-4xl text-center d-none">Total added Products <span id="total-players"
+                            class="text-blue-500">0</span>
+                    </p>
+                    <div class="text-center text-white">
+                        <div class="playercard card-body bg-dark my-2">
+                            <!-- <h1 class="card-title fs-4 fw-bold text-black">Selected - V -->
+                            <table class="table table-dark table-borderless text-white text-center ">
+                                <!-- head -->
+                                <thead>
 
-                        <h4 class="text-center m-3">Selected - V</h4>
-                        <ol class="ps-5 ms-4 py-4">
+                                    <tr style="border: hidden;">
+                                        <th></th>
+                                        <th class="w-100 mx-auto fs-4">
+                                            Selected - V</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="playerList">
+                                </tbody>
+                            </table>
+                            </h1>
+                        </div>
+                    </div>
+                        <!-- <span id="player-list"></span> -->
+                        <!-- <ol id="player-list" class="ps-5 ms-4 py-4">
                             <li class="pb-2">Lionel Messi</li>
                             <li class="pb-2">Kylian Mbappé</li>
                             <li class="pb-2">Neymar Jr</li>
                             <li class="pb-2">Renato Sanches</li>
                             <li class="pb-4">Keylor Navas</li>
-                        </ol>
+                        </ol> -->
 
                     </div>
+
+
                     <div class="col-lg-12 bg-dark text-white pb-4 pt-3">
 
                         <h4 class="text-center m-4 "> Budget</h4>
                         <label class="ps-2 pe-4 ">Per Player </label>
-                       <input type="number" class="w-50 bg-dark border border-white ms-3" name="" id="">
+                       <input type="number" class="text-white w-50 bg-dark border border-white ms-3" name="" id="">
                        <button class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate</button>
                        <p class="mt-3 ps-3">Player Expenses<span class="ps-5"><span>$</span>5000</span></p>
 
                        
                        <label class="ps-3 pe-5 mt-1">Manager</label> 
-                       <input type="number" class="bg-dark border border-white" style="width: 120px; height: 35px;" name="" id="">
+                       <input type="number" class="bg-dark border border-white text-white" style="width: 120px; height: 35px;" name="" id="">
                        
                        <label class="ps-3 pe-5 mt-3">Coach</label> 
-                       <input type="number" class="ms-3 bg-dark border border-white" style="width: 120px; height: 35px;" name="" id="">
+                       <input type="number" class="text-white ms-3 bg-dark border border-white" style="width: 120px; height: 35px;" name="" id="">
                        <button class="border-0 py-2 bg-primary w-100 mt-3 text-white me-5">Calculate Total</button>
 
                        <p class="mt-3 ps-3">Total<span class="ps-5 ms-5 text-warning"><span class="ps-5">$</span>5000</span></p>
@@ -163,6 +198,7 @@
 
         </section>
     </main>
+    <script src="js/js1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
