--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports</title>
+    <title>Dream Team</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/13d0c8048e.js" crossorigin="anonymous"></script>
@@ -17,9 +17,9 @@
         <div>
             <img src="images/ban.jpg" class="w-100" style="height:600px;" alt="">
             <div class="card-img-overlay text-center text-white mt-5 pt-5">
-                <h5 class="h-tittle card-title mt-5 pt-5 fw-bold fs-1">Sports World</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
+                <h5 class="h-tittle card-title mt-5 pt-5 fw-bold fs-1">Dream Team</h5>
+                <p class="card-text">This is where you can build your original team by selecting your favourite players and managers. When you are ready, put your team to test by taking part in various events.</p>
+                
               </div>
         </div>
     </header>
