--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <div class="card-body">
                               <h5 class="card-title text-center">Neymar Jr</h5>
                               <p class="card-text text-center"><small>36 Goals . 120 Assist</small>.</p>
-                              <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 text-white me-5" style="margin-top:-900px;">Select</button>
+                              <button onclick="addList(this)" id="select-btn" class="btn btn-primary w-100">Select</button>
                             </div>
                           </div>
 
@@ -60,7 +60,7 @@
                               <h5 class="card-title text-center">Kylian Mbappé
                             </h5>
                               <p class="card-text text-center"><small>36 Goals . 120 Assist</small>.</p>
-                              <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 text-white me-5" style="margin-top:-900px;">Select</button>
+                              <button onclick="addList(this)" id="select-btn" class="btn btn-primary w-100">Select</button>
                             </div>
                           </div>
 
@@ -74,7 +74,7 @@
                             <div class="card-body">
                               <h5 class="card-title text-center">Lionel Messi</h5>
                               <p class="card-text text-center"><small>36 Goals . 120 Assist</small>.</p>
-                              <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 text-white me-5" style="margin-top:-900px;">Select</button>
+                              <button onclick="addList(this)" id="select-btn" class="btn btn-primary w-100">Select</button>
                             </div>
                           </div>
 
@@ -88,7 +88,7 @@
                             <div class="card-body">
                               <h5 class="card-title text-center">Vítor Machado</h5>
                               <p class="card-text text-center"><small>36 Goals . 120 Assist</small>.</p>
-                              <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 text-white me-5" style="margin-top:-900px;">Select</button>
+                              <button onclick="addList(this)" id="select-btn" class="btn btn-primary w-100">Select</button>
                             </div>
                           </div>
 
@@ -102,7 +102,7 @@
                             <div class="card-body">
                               <h5 class="card-title text-center">Sergio Ramos</h5>
                               <p class="card-text text-center"><small>36 Goals . 120 Assist</small>.</p>
-                              <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 text-white me-5" style="margin-top:-900px;">Select</button>
+                              <button onclick="addList(this)" id="select-btn" class="btn btn-primary w-100">Select</button>
                             </div>
                           </div>
 
@@ -116,7 +116,7 @@
                             <div class="card-body">
                               <h5 class="card-title text-center">Renato Sanches</h5>
                               <p class="card-text text-center"><small>36 Goals . 120 Assist</small>.</p>
-                              <button onclick="addList(this)" id="select-btn" class="border-0 py-2 bg-primary w-100 text-white me-5" style="margin-top:-900px;">Select</button>
+                              <button onclick="addList(this)" id="select-btn" class="btn btn-primary w-100">Select</button>
                             </div>
                           </div>
 
